# Aether

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  VERSIONING.md
bench/: CMakeLists.txt  aether_transport.h  bench_common.h  bench_latency.cpp  bench_throughput.cpp  harness_latency.h  harness_throughput.h  report.h  transport.h
cli/: CMakeLists.txt  main.cpp
cmake/: version.h.in
daemon/: CMakeLists.txt  acceptor.cpp  acceptor.h  main.cpp  tcp_server.cpp  tcp_server.h  topic_registry.cpp  topic_registry.h
docs/: scaling-challenges.md  vision.md
include/aether/: consume.h  control.h  publish.h  remote.h  remote_publisher.h  remote_subscriber.h  ring.h  shm.h  subscribe.h  wire.h
lib/: CMakeLists.txt  consume.cpp  publish.cpp  remote.cpp  remote_publisher.cpp  remote_subscriber.cpp  shm.cpp  subscribe.cpp
tests/: CMakeLists.txt  daemon_fixture.h  test_control.cpp  test_pubsub.cpp  test_race_consume.cpp  test_ring.cpp  test_stress.cpp  test_tcp.cpp
